<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
              android:layout_height="match_parent" android:gravity="center_horizontal"
              android:orientation="vertical" android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin" tools:context="com.daon.fido.sdk.sample.TransactionActivity"
              android:scaleType = "centerCrop">

    <ProgressBar android:id="@+id/transaction_progress" style="?android:attr/progressBarStyleLarge"
                 android:layout_width="wrap_content" android:layout_height="wrap_content"
                 android:layout_marginBottom="8dp" android:visibility="gone" />

    <TextView
        android:textColor="#005685"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/step_up_auth"
        android:textSize="50sp"
        android:shadowColor="#fbeee4"
        android:shadowDx="3"
        android:shadowDy="3"
        android:shadowRadius="1.5"
        android:id="@+id/textView" />

    <ScrollView android:id="@+id/transaction_view" android:layout_width="match_parent"
                android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <LinearLayout android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="#90FFFFFF"
                android:focusable="true" android:focusableInTouchMode="true">

                <CheckBox android:id="@+id/transaction_confirmation_check_box" style="?android:textAppearanceMedium"
                    android:layout_width="match_parent" android:layout_height="wrap_content"
                    android:layout_marginTop="20dp" android:text="@string/prompt_transaction_confirmation"
                    android:checked="true"/>

                <CheckBox android:id="@+id/otp_check_box" style="?android:textAppearanceMedium"
                    android:layout_width="match_parent" android:layout_height="wrap_content"
                    android:layout_marginTop="20dp" android:text="@string/prompt_otp"
                    android:checked="false"/>
        </LinearLayout>

            <Button android:id="@+id/authenticate_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp" android:text="@string/action_authenticate"
                    android:focusable="true"
                    android:background="@drawable/standard_button"
                    style="@style/ButtonFont"
                />

            <Button android:id="@+id/check_policy_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp" android:text="@string/action_check_policy"
                    android:focusable="true"
                    android:background="@drawable/standard_button"
                    style="@style/ButtonFont"
                />

            <Button android:id="@+id/single_shot_authenticate_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp" android:text="@string/action_single_shot_authenticate"
                android:focusable="true"
                android:background="@drawable/standard_button"
                style="@style/ButtonFont"
                />


        </LinearLayout>

    </ScrollView>

</LinearLayout>